feat: 新建群组
closes #11
